STYLE: Misc CSS fixes STYLE: Removed spacing - BS4 now has them as natives anyway

--- a/skeleton/theme/bootstrap-extensions/dropdown-menu-icons.css
+++ b/skeleton/theme/bootstrap-extensions/dropdown-menu-icons.css
@@ -1,3 +1,3 @@
-.dropdown-item i {
+.dropdown-menu li > a > i {
 	margin-right: 5px;
 }
